# AuboEngine

./: Actor.cpp  Actor.h  Body.cpp  Body.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  Constants.h  Fixture.cpp  Fixture.h  Game.cpp  Game.h  GameState.h  GraphicsFramework.cpp  GraphicsFramework.h  Level.cpp  Level.h  Object.h  README.md  SceneObject.cpp  SceneObject.h  SceneryObject.cpp  SceneryObject.h  Serializable.cpp  Serializable.h  Utils.cpp  Utils.h  World.cpp  World.h  main.cpp
Box2D/: Render.cpp
TestGame/: game.xml
TestGame/Levels/1/: level.xml
